using view height fixed problem with dropdown blank space overflowing

--- a/blog-frontend/src/css/style.css
+++ b/blog-frontend/src/css/style.css
@@ -104,11 +104,14 @@
     letter-spacing: 0px; } }
 
 .dropdown-blank-space {
-  height: 300px;
+  display: inline-block;
+  height: 100vh;
   width: 100%;
   margin: 0px;
   padding: 0px;
-  background-color: red; }
+  background-color: red;
+  clear: both;
+  overflow: hidden; }
 
 .project-dropdown-element {
   width: 100%;
@@ -139,6 +142,36 @@
 #projects-dropdown-container:hover #projects-dropdown {
   display: flex; }
 
+.dropout-div {
+  height: 60px;
+  width: 100%;
+  margin: 0px; }
+
+.dropout-div:hover .dropout-entry-div {
+  background: white;
+  color: #4dd6fc; }
+
+.scndry-dd {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  width: 100%;
+  height: 1000px;
+  top: 0%;
+  left: 100%; }
+
+.scndry-dd:after {
+  overflow: hidden; }
+
+.scndry-dd:hover {
+  display: flex; }
+
+.scndry-dd-elem {
+  background: #dadada; }
+
+#secondary-dropdown-container {
+  width: 20%; }
+
 #she-town-text {
   font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
   font-size: 15px;
@@ -165,33 +198,6 @@
   .nav-element {
     font-size: 12px;
     letter-spacing: 0px; } }
-
-.dropout-div {
-  height: 60px;
-  width: 100%;
-  margin: 0px; }
-
-.dropout-div:hover .dropout-entry-div {
-  background: white;
-  color: #4dd6fc; }
-
-.scndry-dd {
-  display: flex;
-  position: absolute;
-  flex-direction: column;
-  width: 100%;
-  height: 1000px;
-  top: 0%;
-  left: 100%; }
-
-.scndry-dd:hover {
-  display: flex; }
-
-.scndry-dd-elem {
-  background: #dadada; }
-
-#secondary-dropdown-container {
-  width: 20%; }
 
 .arrow-down {
   transform: rotate(45deg);
